--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "lucide-react": "^0.263.1",
     "jspdf": "^2.5.1",
     "docx": "^8.2.2",
-    "file-saver": "^2.0.5"
+    "file-saver": "^2.0.5",
+    "@azure-rest/ai-inference": "^1.0.0-beta.2",
+    "@azure/core-auth": "^1.5.0",
+    "framer-motion": "^10.16.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
